bin/testsuite/tests/compiler/src/errors/compiler594.swg
#global testerror "Err0594"
func(op: string) toto() {}

#test
{
    toto'("0", "0")()
}
